--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,10 @@ body {
 .dj_ie .infowindow .window .top .right .user .content { position: relative; }
 .dj_ie .simpleInfoWindow .content {position: relative;}
 
-.esriAttributeInspector {height:270px;}
+.esriAttributeInspector {
+  height:275px;
+}
+
 .esriAttributeInspector .atiLayerName {display:none;}
 
 .esriAttributeInspector .atiLabel {
